--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
+    "socket.io": "^4.7.5"
   }
 }
