--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node Server.js",
     "dev": "nodemon Server.js"
-
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "mongoose": "^8.14.3",
     "socket.io": "^4.7.5"
   }
 }
